--- a/Home.html
+++ b/Home.html
@@ -34,19 +34,19 @@
 							<p>9 - Beryllium</p>
 						</div>
 						<div class="col">
-							<a href="subpages/Bio.html">
+							<a href="subpages/BIO.html">
 								<div class="card card1">
 									<h5>Biology</h5>
 									<p>Cladogram</p>
 								</div>
 							</a>
-							<a href="subpages/Eng.html">
+							<a href="subpages/ENG.html">
 								<div class="card card2">
 									<h5>English</h5>
 									<p>Canterbury Tales</p>
 								</div>
 							</a>
-							<a href="subpages/Valed.html">
+							<a href="subpages/VALED.html">
 								<div class="card card3">
 									<h5>Values Education</h5>
 									<p>Goals</p>
